Fix comment alignment

--- a/fives/static/fives/main.css
+++ b/fives/static/fives/main.css
@@ -19,12 +19,7 @@
 }
 
 .comments .container{
-  border-radius: 10px;
-  margin-bottom: 10px;
-  max-width: 500px;
   margin-top: 10px;
-  margin-left: auto;
-  margin-right: 55%;
 }
 
 .comment .container{
